--- a/package.json
+++ b/package.json
@@ -101,13 +101,13 @@
     "@babel/core": "^7.17.2",
     "@babel/eslint-parser": "^7.17.0",
     "@intlify/eslint-plugin-vue-i18n": "^1.4.0",
-    "@intlify/vite-plugin-vue-i18n": "^3.2.2",
+    "@intlify/vite-plugin-vue-i18n": "3.2.2",
     "@rollup/plugin-strip": "^2.1.0",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
-    "@vitejs/plugin-legacy": "^1.7.0",
-    "@vitejs/plugin-vue": "^2.2.0",
+    "@vitejs/plugin-legacy": "1.7.0",
+    "@vitejs/plugin-vue": "2.2.0",
     "@vue/compiler-sfc": "^3.2.30",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/server-renderer": "^3.2.30",
@@ -133,14 +133,14 @@
     "tailwindcss": "^2.2.19",
     "typescript": "^4.5.5",
     "unplugin-vue-components": "^0.17.18",
-    "vite": "^2.8.0",
-    "vite-plugin-optimize-persist": "^0.1.2",
-    "vite-plugin-package-config": "^0.1.1",
-    "vite-plugin-pages": "^0.20.2",
-    "vite-plugin-pwa": "^0.11.13",
-    "vite-plugin-style-import": "^1.4.0",
-    "vite-plugin-vue-layouts": "^0.6.0",
-    "vite-svg-loader": "^3.1.2",
+    "vite": "2.8.0",
+    "vite-plugin-optimize-persist": "0.1.2",
+    "vite-plugin-package-config": "0.1.1",
+    "vite-plugin-pages": "0.20.2",
+    "vite-plugin-pwa": "0.11.13",
+    "vite-plugin-style-import": "1.4.0",
+    "vite-plugin-vue-layouts": "0.6.0",
+    "vite-svg-loader": "3.1.2",
     "vue-loader": "^17.0.0",
     "vue-tsc": "^0.31.2"
   },
