--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -61,27 +61,30 @@ jobs:
         with:
           node-version: 12
 
-      - name: "Automated Version Bump"
-        uses: "phips28/gh-action-bump-version@master"
-        env:
-          GITHUB_USER: atlan-ci
-          GITHUB_EMAIL: it@atlan.com
-          GITHUB_TOKEN: ${{ secrets.my_pat }}
-          GITHUB_ACTOR: atlan-ci
-        with:
-          tag-prefix: ""
-          skip-tag: "true"
+      # - name: "Automated Version Bump"
+      #   uses: "phips28/gh-action-bump-version@master"
+      #   env:
+      #     GITHUB_USER: atlan-ci
+      #     GITHUB_EMAIL: it@atlan.com
+      #     GITHUB_TOKEN: ${{ secrets.my_pat }}
+      #     GITHUB_ACTOR: atlan-ci
+      #   with:
+      #     tag-prefix: ""
+      #     skip-tag: "true"
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2.0.1
         with:
-          version: 6.23.2
+          version: 7.2.1
 
       - name: Setup Node ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
           cache: "pnpm"
+
+      - name: npm Install
+        run: npm install
 
       - name: pnpm Install
         run: pnpm install
