--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "vue-horizontal": "^1.0.2",
     "vue-i18n": "^9.2.0-beta.25",
     "vue-linkify": "^1.0.1",
+    "vue-plugin-load-script": "^2.1.1",
     "vue-router": "^4.0.12",
     "vue-sse": "^2.5.0",
     "vue3-dnd": "^2.0.0",
