Added Mabl secrets

--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -2,7 +2,7 @@ name: Atlan Product Workflow
 on:
   push:
     branches:
-      - beta
+      - staging
 jobs:
   deploy:
     name: Deployment
@@ -125,3 +125,19 @@ jobs:
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
         if: failure() # Pick up events even if the job fails or is canceled.
+  test:
+    name: mabl Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Functional test deployment
+        id: mabl-test-deployment
+        uses: mablhq/github-run-tests-action@v1
+        env:
+          MABL_API_KEY: ${{ secrets.MABL_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.my_pat }}
+        with:
+          application-id: SSRZM3WGbGcjo75qHgBY1w-a
+          environment-id: Ma3nO6J3PG68OqURmDRFEA-e
+          plan-labels: Assets
