--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -138,6 +138,6 @@ jobs:
           MABL_API_KEY: ${{ secrets.MABL_API_KEY }}
           GITHUB_TOKEN: ${{ secrets.my_pat }}
         with:
-          application-id: SSRZM3WGbGcjo75qHgBY1w-a
-          environment-id: Ma3nO6J3PG68OqURmDRFEA-e
+          application-id: ${{ secrets.MABL_APPLICATION_ID }}
+          environment-id: ${{ secrets.MABL_ENVIRONMENT_ID }}
           plan-labels: Assets
