Added more plans

--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -140,4 +140,4 @@ jobs:
         with:
           application-id: ${{ secrets.MABL_APPLICATION_ID }}
           environment-id: ${{ secrets.MABL_ENVIRONMENT_ID }}
-          plan-labels: Assets
+          plan-labels: Governance, Assets, Admin Center
