--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -141,4 +141,4 @@ jobs:
         with:
           application-id: ${{ secrets.MABL_APPLICATION_ID }}
           environment-id: ${{ secrets.MABL_ENVIRONMENT_ID }}
-          plan-labels: Governance, Assets, Admin Center
+          plan-labels: staging
