--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@antv/layout": "^0.1.31",
     "@antv/x6": "^1.30.1",
+    "@formkit/auto-animate": "^1.0.0-beta.1",
     "@tailwindcss/typography": "^0.4.1",
     "@tiptap/core": "^2.0.0-beta.174",
     "@tiptap/extension-code": "^2.0.0-beta.26",
@@ -155,6 +156,7 @@
       "include": [
         "@antv/layout",
         "@antv/x6",
+        "@formkit/auto-animate/vue",
         "@tiptap/core",
         "@tiptap/extension-highlight",
         "@tiptap/extension-image",
