--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@antv/g2plot": "^2.4.20",
     "@antv/layout": "^0.1.31",
     "@antv/x6": "^1.30.1",
     "@tailwindcss/typography": "^0.4.1",
