--- a/package.json
+++ b/package.json
@@ -98,6 +98,8 @@
   "devDependencies": {
     "@babel/core": "^7.17.2",
     "@babel/eslint-parser": "^7.17.0",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@intlify/eslint-plugin-vue-i18n": "^1.4.0",
     "@intlify/vite-plugin-vue-i18n": "3.2.2",
     "@rollup/plugin-strip": "^2.1.0",
