FIxed graph configs on monitor page

--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
   "vite": {
     "optimizeDeps": {
       "include": [
+        "@antv/g2plot",
         "@antv/layout",
         "@antv/x6",
         "@tiptap/core",
